Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10778

Append do not return the correct error code when the value is too big.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0
    • 2.5.1
    • couchbase-bucket
    • Security Level: Public
    • 2.5.1 enterprise edition (build-1083)
      Mac OS X
    • Triaged
    • Unknown
    • June 30 - July 18

    Description

      When you append to an item that causes it to go over 20MB the error message sent to the client is "not stored". The server should be sending E2BIG (0x003) instead.

      Attachments

        1. Append.java
          2 kB
        2. append.pcapng
          26.35 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              venu Venu Uppalapati (Inactive)
              pvarley Patrick Varley (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty