MB-10778: Return item not found instead of not stored

When an application tried to append to an item that doesn't exist,
ep-engine needs to return not found as opposed to not stored

Change-Id: Ic4e50b069e41028cd879530a183d3ac43a3ebc1c
Reviewed-on: http://review.couchbase.org/35619
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>